--- a/src/styles/css-variables.scss
+++ b/src/styles/css-variables.scss
@@ -1,6 +1,14 @@
 :root {
-    --primary: red;
+    --primary: #FFFFFF;
+    --secondary: #F6F6F8;
+    --text-secondary: #C5C5C5;
+    --text-primary: #000000;
 
-    --rd-s:2px;
-    --rd-m:4px;
+    --spacer-xs : 4px;
+    --spacer-s: 8px;
+    --spacer-m: 16px;
+    --spacer-l: 24px;
+    --spacer-xl: 32px;
+
+    
 }
