--- a/src/styles/css-variables.scss
+++ b/src/styles/css-variables.scss
@@ -1,6 +1,6 @@
 :root {
-    --primary: #FFFFFF;
-    --secondary: #F6F6F8;
+    --color-primary: #FFFFFF;
+    --color-secondary: #F6F6F8;
     --text-secondary: #C5C5C5;
     --text-primary: #000000;
 
@@ -13,5 +13,7 @@
     --color-indicator:#303030;
     
     --font-size_primary: 2rem;
+
+    --radi-m:15px;
     
 }
