--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,40 +1,96 @@
-@import '../../styles/scss-variables';
+@import "../../styles/scss-variables";
 .home {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: minmax(200px,400px) 1fr;
-
+  height: 100vh;
+  display: grid;
+  grid-template-columns: minmax(200px, 400px) 1fr;
 }
 
 .leftSide {
-    grid-column: 1/2;
-    background-color: var(--color-primary)
+  grid-column: 1/2;
+  background-color: var(--color-primary);
 }
 
 .rightSide {
-    grid-column: 2/3;
-    background-color: var(--color-secondary);
-    padding: calc(var(--spacer-xl) * 2);
+  grid-column: 2/3;
+  background-color: var(--color-secondary);
+  padding: calc(var(--spacer-xl) * 2);
 }
 
 .tabItem {
-    font-size: 2rem;
-    color: var(--text-primary);
+  font-size: 2rem;
+  color: var(--text-primary);
 }
 
 .boldText {
-    margin-left: var(--spacer-xl);
+  margin-left: var(--spacer-xl);
 }
 
 .tabs {
-    & button:last-of-type {
-        margin-left: 40px;
-    }
-    
+  & button:last-of-type {
+    margin-left: 40px;
+  }
 }
 
 .days {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(130px, 140px));
-    grid-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(130px, 140px));
+  grid-gap: 1rem;
+}
+
+.highlights {
+  margin-top: calc(var(--spacer-l) * 2);
+}
+.cardArea {
+  margin-top: var(--spacer-m);
+}
+
+.chartOverflow {
+  position: relative;
+  overflow: hidden; /* Comment this line to understand the trick */
+  width: 180px;
+  height: 90px; /* Half circle (overflow) */
+
+  & div {
+    transform: rotate(45deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 180px;
+    height: 180px; /* full circle! */
+    border-radius: 50%;
+    box-sizing: border-box;
+    border: 12px solid #eee; /* half gray, */
+    border-bottom-color: #ffbf5e; /* half azure */
+    border-right-color: #ffbf5e;
+    transition: transform 1.2s;
+  }
+
+  
+}
+.chartContainer {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+
+.highlightsText {
+  justify-self: start;
+}
+
+.chartText{
+    justify-self: flex-start;
+    width: 100%;
+}
+
+
+
+.card {
+    .container {
+        
+    }
+    width: 250px;
+    height: 200px;
 }
