--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -10,12 +10,6 @@
   background-color: var(--color-primary);
 }
 
-.rightSide {
-  grid-column: 2/3;
-  background-color: var(--color-secondary);
-  padding: calc(var(--spacer-xl) * 2);
-}
-
 .tabItem {
   font-size: 2rem;
   color: var(--text-primary);
@@ -34,6 +28,7 @@
 .days {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(130px, 140px));
+  grid-auto-rows: 150px;
   grid-gap: 1rem;
 }
 
@@ -41,38 +36,11 @@
   margin-top: calc(var(--spacer-l) * 2);
 }
 .cardArea {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(210px, 275px));
+  grid-auto-rows: 220px;
+  grid-gap: 2rem;
   margin-top: var(--spacer-m);
-}
-
-.chartOverflow {
-  position: relative;
-  overflow: hidden; /* Comment this line to understand the trick */
-  width: 180px;
-  height: 90px; /* Half circle (overflow) */
-
-  & div {
-    transform: rotate(45deg);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 180px;
-    height: 180px; /* full circle! */
-    border-radius: 50%;
-    box-sizing: border-box;
-    border: 12px solid #eee; /* half gray, */
-    border-bottom-color: #ffbf5e; /* half azure */
-    border-right-color: #ffbf5e;
-    transition: transform 1.2s;
-  }
-
-  
-}
-.chartContainer {
-  position: relative;
-  margin-top: 15px;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
 }
 
 
@@ -80,17 +48,55 @@
   justify-self: start;
 }
 
-.chartText{
-    justify-self: flex-start;
-    width: 100%;
+.chartText {
+  justify-self: flex-start;
+  width: 100%;
+}
+
+.iconContainer {
+  padding: var(--spacer-s);
+  border: 2px solid #f4f4f5;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.windText {
+  margin-left: var(--spacer-s);
+}
+
+.sun {
+  background: linear-gradient(90deg, rgba(255,222,45,1) 35%, rgba(255,199,94,1) 100%);
+  width: 30px;
+  height: 30px;
+  & svg {
+    fill: #FFFDF2;
+
+  }
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sunContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  
 }
 
 
+.sunText {
+  margin-left: 20px;
+}
 
-.card {
-    .container {
-        
-    }
-    width: 250px;
-    height: 200px;
+
+.sunLastText {
+  margin-top: 40px;
+    margin-bottom: 10px;
 }
