--- a/src/pages/Home/components/cards/cards.module.scss
+++ b/src/pages/Home/components/cards/cards.module.scss
@@ -9,6 +9,16 @@
     composes: container from "/src/components/card/card.module.scss";
     padding: var(--spacer-l);
     justify-content: space-between;
+
+  
+      & span {
+
+        height: 100%;
+        justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+      }
+   
   }
 
   .withoutFooter {
