--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -20,6 +20,11 @@
 }
 
 .tabs {
+  display: flex;
+  justify-content: space-between;
+  & div {
+    margin-right: calc(var(--spacer-xl) * 2)
+  }
   & button:last-of-type {
     margin-left: 40px;
   }
@@ -30,19 +35,8 @@
   grid-template-columns: repeat(auto-fill, minmax(130px, 140px));
   grid-auto-rows: 150px;
   grid-gap: 1rem;
+  padding-top: calc(var(--spacer-xl) * 1.5);
 }
-
-.highlights {
-  margin-top: calc(var(--spacer-l) * 2);
-}
-.cardArea {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(210px, 275px));
-  grid-auto-rows: 220px;
-  grid-gap: 2rem;
-  margin-top: var(--spacer-m);
-}
-
 
 .highlightsText {
   justify-self: start;
@@ -53,50 +47,27 @@
   width: 100%;
 }
 
-.iconContainer {
+.tempatureTab {
+  composes: tab from '/src/components/tab/tabs.module.scss';
+  background-color: var(--text-primary);
+  color: var(--color-primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  padding-bottom: 0;
   padding: var(--spacer-s);
-  border: 2px solid #f4f4f5;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.windText {
-  margin-left: var(--spacer-s);
-}
-
-.sun {
-  background: linear-gradient(90deg, rgba(255,222,45,1) 35%, rgba(255,199,94,1) 100%);
-  width: 30px;
-  height: 30px;
-  & svg {
-    fill: #FFFDF2;
-
+  &::before{
+    content: none;
   }
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.sunContainer {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  
-}
+.skeleton {
+  & span {
 
-
-.sunText {
-  margin-left: 20px;
-}
-
-
-.sunLastText {
-  margin-top: 40px;
-    margin-bottom: 10px;
+    height: 100%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+  }
 }
