--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -5,9 +5,45 @@
   grid-template-columns: minmax(200px, 400px) 1fr;
 }
 
+.searchContainer {
+  width:75%;
+  position: relative;
+  height: 30px;
+}
+.searchInput {
+  width: 100%;
+  padding-left: var(--spacer-xl);
+  height: 100%;
+  outline: none;
+  border: none;
+  &:focus {
+    outline: none;
+  border: none;
+  }
+}
+
+
+
+.searchIcon {
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-left: 2px;
+}
+
+
+.suggestions {
+  width: 100%;
+
+  overflow-y: auto;
+  background-color: gray;
+}
 .leftSide {
   grid-column: 1/2;
   background-color: var(--color-primary);
+  padding: calc(var(--spacer-xl) * 2) var(--spacer-s) calc(var(--spacer-xl) * 2) calc(var(--spacer-xl) * 2);
 }
 
 .tabItem {
@@ -37,7 +73,6 @@
   grid-gap: 1rem;
   padding-top: calc(var(--spacer-xl) * 1.5);
 }
-
 .highlightsText {
   justify-self: start;
 }
