--- a/src/components/text/text.module.scss
+++ b/src/components/text/text.module.scss
@@ -1,3 +1,5 @@
+@import 'mixins.scss';
+
 .text {
     font-size: 2rem;
     display: inline-block;
@@ -16,14 +18,17 @@
 
     &_medium {
         font-size: 2rem;
+       
     }
 
     &_large {
         font-size: 2.5rem;
+
     }
 
     &_xl {
         font-size: 6rem;
+       
     }
     &_bold {
         font-weight: bold;
