--- a/src/pages/Home/components/sides/highlights/highlights.module.scss
+++ b/src/pages/Home/components/sides/highlights/highlights.module.scss
@@ -1,13 +1,24 @@
+@import 'mixins.scss';
+
 .highlights {
   margin-top: calc(var(--spacer-l) * 2);
 }
 
+.highlightText {
+  @include breakpoint('md') {
+    width: 100%;
+    text-align: center;
+  }
+}
 .cardArea {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(210px, 275px));
   grid-auto-rows: 220px;
   grid-gap: 2rem;
   margin-top: var(--spacer-m);
+  @include breakpoint('md') {
+    justify-content: center;
+  }
 }
 
 .iconContainer {
