--- a/src/pages/Home/components/sides/left/leftSide.module.scss
+++ b/src/pages/Home/components/sides/left/leftSide.module.scss
@@ -1,14 +1,23 @@
+@import 'mixins.scss';
+
 .content {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include breakpoint('md') {
+        align-items: center;
+    }
 }
 .top {
     display: flex;
     flex: 1.25;
     flex-direction: column;
     justify-content: center;
+    @include breakpoint('md') {
+        align-items: center;
+    }
 }
 
 .bottom {
@@ -16,6 +25,9 @@
     flex: 1;
     justify-content: center;
     flex-direction: column;
+    @include breakpoint('md') {
+        align-items: center;
+    }
 }
 .time {
     display: flex;
@@ -52,5 +64,9 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+
+    @include breakpoint('md') {
+        padding-right: 0;
     }
 }
