--- a/src/pages/Home/components/sides/right/rightSide.module.scss
+++ b/src/pages/Home/components/sides/right/rightSide.module.scss
@@ -1,36 +1,59 @@
+@import "mixins.scss";
 
 .tabs {
-    display: flex;
+  display: flex;
+  justify-content: space-between;
+  & div {
+    margin-right: calc(var(--spacer-xl) * 2);
+   
+  }
+  
+  & button:last-of-type {
+    margin-left: 40px;
+  
+  }
+  @include breakpoint("md") {
+   & div {
+     margin-right: 0;
+   }
+
+   & button:first-child {
+     margin-left: var(--spacer-m);
+   }
+
+   & button:last-of-type {
+     margin-left: var(--spacer-m);
+   }
+
+   & button:last-child {
+     margin-right: var(--spacer-m);
+   }
+  }
+}
+
+.days {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(130px, 140px));
+  grid-auto-rows: 150px;
+  grid-gap: 1rem;
+  padding-top: calc(var(--spacer-xl) * 1.5);
+
+  @include breakpoint('md') {
+    justify-content: center;
+  }
+}
+
+.skeleton {
+  & span {
+    height: 100%;
     justify-content: space-between;
-    & div {
-      margin-right: calc(var(--spacer-xl) * 2)
-    }
-    & button:last-of-type {
-      margin-left: 40px;
-    }
+    display: flex;
+    flex-direction: column;
   }
-
-  .days {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(130px, 140px));
-    grid-auto-rows: 150px;
-    grid-gap: 1rem;
-    padding-top: calc(var(--spacer-xl) * 1.5);
-  }
-  
-  .skeleton {
-    & span {
-  
-      height: 100%;
-      justify-content: space-between;
-      display: flex;
-      flex-direction: column;
-    }
-  }
-
+}
 
 .tempatureTab {
-  composes: tab from '/src/components/tab/tabs.module.scss';
+  composes: tab from "/src/components/tab/tabs.module.scss";
   background-color: var(--text-primary);
   color: var(--color-primary);
   display: flex;
@@ -39,7 +62,7 @@
   border-radius: 50%;
   padding-bottom: 0;
   padding: var(--spacer-s);
-  &::before{
+  &::before {
     content: none;
   }
 }
