--- a/src/pages/Home/components/sides/sides.module.scss
+++ b/src/pages/Home/components/sides/sides.module.scss
@@ -1,9 +1,15 @@
+@import 'mixins.scss';
 
 .rightSide {
     
     grid-column: 2/3;
     background-color: var(--color-secondary);
     padding: calc(var(--spacer-xl) * 1.25) var(--spacer-s) calc(var(--spacer-xl) * 1.25) calc(var(--spacer-xl) * 2);
+
+    @include breakpoint('md') {
+      grid-column: 1/3;
+      padding: calc(var(--spacer-xl) * 2) 0 0 0;
+    }
   }
 
 
@@ -11,4 +17,8 @@
   grid-column: 1/2;
   background-color: var(--color-primary);
   padding: calc(var(--spacer-xl) * 2) var(--spacer-s) calc(var(--spacer-xl) * 2) calc(var(--spacer-xl) * 2);
+  @include breakpoint('md') {
+    grid-column: 1/3;
+    padding: var(--spacer-s);
+  }
 }
