--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,4 @@
+@import 'mixins.scss';
 
 body {
     margin: 0;
@@ -11,6 +12,10 @@ body {
   html {
     font-size: 12px;
     -webkit-font-smoothing: antialiased;
+    @include breakpoint('sm') {
+      font-size: 8px;
+    }
+
   }
  body {
     height: 100vh;
